# rust-examples

./: .gitignore  Cargo.toml
arc-references/: Cargo.toml
arc-references/src/: main.rs
cargo-features/: Cargo.toml
cargo-features/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
commands/src/: main.rs
crate-version/: Cargo.toml
crate-version/src/: main.rs
crate-version/tests/: version_upgrades.rs
custom-future/: Cargo.toml  README.md
custom-future/src/: lib.rs  main.rs
delayed-spray-and-pray/: Cargo.toml  README.md
delayed-spray-and-pray/src/: lib.rs  main.rs
distributed-tracing-retry/client/: Cargo.toml  README.md  rust-toolchain.toml
distributed-tracing-retry/client/src/: main.rs
distributed-tracing-retry/server/: Cargo.toml
distributed-tracing-retry/server/src/: main.rs
distributed-tracing/client/: Cargo.toml
distributed-tracing/client/src/: main.rs
distributed-tracing/server/: Cargo.toml
distributed-tracing/server/src/: main.rs
fn-mut-arg/: Cargo.toml
fn-mut-arg/src/: main.rs
fs/: pubkeys.txt
fs/src/: main.rs
futures-join-all/: Cargo.toml
futures-join-all/src/: main.rs
grpc-toxiproxy/: Cargo.toml  README.md
grpc-toxiproxy/src/: client.rs  faults.rs  lib.rs  server.rs
locks/: Cargo.toml
locks/src/: main.rs
long-running-task-checker/: Cargo.toml  README.md
long-running-task-checker/src/: lib.rs  main.rs
mock-structs/: Cargo.toml
mock-structs/src/: main.rs  my_struct.rs  thing_that_uses_my_struct.rs
multiple-cargo-binaries/: Cargo.toml  README.md
panic-hook/: Cargo.toml  README.md
panic-hook/src/: main.rs
retry/: Cargo.toml
retry-basic/: Cargo.toml
retry-basic/src/: lib.rs  main.rs
retry/src/: lib.rs  main.rs
rocket/: Cargo.toml  Rocket.toml
rocket-concurrency/: Cargo.toml  README.md  script_core.js  script_tokio.js
rocket-concurrency/src/: main.rs
rocket-metrics/: Cargo.toml  docker-compose.yml
rocket-metrics/src/: lib.rs  main.rs
rocket/src/: main.rs
runtime-hang/: Cargo.toml  README.md
runtime-hang/src/: main.rs
serde/: Cargo.toml
serde-enum/: Cargo.toml  README.md  sample.json  sample_incorrect.json  sample_incorrect_serialized.json  sample_serialized.json
serde-enum/src/: main.rs
serde/src/: main.rs
simple-dockerized-server/: Cargo.toml  Dockerfile
simple-dockerized-server/src/: main.rs
simple-observability-pipeline/: .gitignore  Cargo.toml  README.md  builder-config.custom.yaml  docker-compose.yml  otel-collector-config.yaml
simple-observability-pipeline/filteringrouter/: config.go  factory.go  go.mod  go.sum  logs_router.go  metrics_router.go  traces_router.go  validation.go
simple-observability-pipeline/otelcol/file_storage/filelogreceiver_logs/: receiver_filelog_logs
simple-observability-pipeline/otelcol/file_storage/filelogreceiver_metrics/: receiver_filelog_metrics
simple-observability-pipeline/otelcol/file_storage/filelogreceiver_traces/: receiver_filelog_traces
simple-observability-pipeline/src/: lib.rs  observable_server.rs  proxy_server.rs  publish_otel.rs
simple-systemd-http-server/: Cargo.toml  server@.service
simple-systemd-rocket-server/: Cargo.toml  server.service  server@.service
simple-systemd-rocket-server/src/: main.rs
tasks-greater-than-interval/: Cargo.toml  README.md
tasks-greater-than-interval/src/: main.rs
tracing-channels/: Cargo.toml
tracing-channels/src/: lib.rs  main.rs
tracing-fmt/: Cargo.toml  README.md
tracing-fmt/src/: event_format.rs  field_format.rs  lib.rs  main.rs
