[workspace]
members = [
    "arc-references",
    "cargo-features",
    "closures",
    "commands",
    "delayed-spray-and-pray",
    "distributed-tracing/client",
    "distributed-tracing/server",
    "distributed-tracing-retry/client",
    "distributed-tracing-retry/server",
    "fs",
    "locks",
    "long-running-task-checker",
    "mock-structs",
    "retry",
    "retry-basic",
    "rocket",
    "serde",
]