[workspace]
members = [
    "arc-references",
    "cargo-features",
    "closures",
    "crate-version",
    "commands",
    "delayed-spray-and-pray",
    "distributed-tracing/client",
    "distributed-tracing/server",
    "distributed-tracing-retry/client",
    "distributed-tracing-retry/server",
    "fs",
    "futures-join-all",
    "locks",
    "long-running-task-checker",
    "mock-structs",
    "retry",
    "retry-basic",
    "rocket",
    "serde",
    "simple-dockerized-server"
]