[workspace]
members = [
    "arc-references",
    "cargo-features",
    "closures",
    "crate-version",
    "commands",
    "delayed-spray-and-pray",
    "distributed-tracing/client",
    "distributed-tracing/server",
    "distributed-tracing-retry/client",
    "distributed-tracing-retry/server",
    "fn-mut-arg",
    "fs",
    "futures-join-all",
    "grpc-toxiproxy",
    "locks",
    "long-running-task-checker",
    "mock-structs",
    "multiple-cargo-binaries",
    "retry",
    "retry-basic",
    "rocket",
    "serde",
    "simple-dockerized-server",
    "tasks-greater-than-interval"
]