[package]
name = "long-running-task-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
env_logger = "*"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1.23.0", features = ["full", "rt-multi-thread"] }