[package]
name = "rocket-concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.5.1"
base64 = "0.13.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "process"] }