[package]
name = "rocket-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
once_cell = "1.13"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["metrics", "logs"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "metrics", "logs"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }