[package]
name = "simple-observability-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "observable-server"
path = "src/observable_server.rs"

[[bin]]
name = "proxy-server"
path = "src/proxy_server.rs"

[dependencies]
opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["metrics"] }
opentelemetry-proto = { version = "0.6.0", features = ["full"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tower = "0.4"