[package]
name = "simple-observability-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publish-otel"
path = "src/publish_otel.rs"

[[bin]]
name = "proxy-server"
path = "src/proxy_server.rs"

[dependencies]
chrono = "0.4.23"
once_cell = "1.13"
opentelemetry = "0.23"
opentelemetry-appender-tracing = { version = "0.4.0", default-features = false }
opentelemetry-otlp = { version = "0.16", features = ["metrics", "logs"] }
opentelemetry-proto = { version = "0.6.0", features = ["full"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics", "logs"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tower = "0.4"
tracing = { version = "0.1.40", features = ["std"] }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }