[package]
name = "simple-observability-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publish-otel"
path = "src/publish_otel.rs"

[[bin]]
name = "proxy-server"
path = "src/proxy_server.rs"

[dependencies]
anyhow = "*"
chrono = "0.4.23"
hyper-util = { version = ">=0.1.4, <0.2" }
futures = "0.3.30"
once_cell = "1.13"
opentelemetry = "0.24"
opentelemetry-appender-tracing = { version = "0.5.0", default-features = false }
opentelemetry-otlp = { version = "0.17", features = ["metrics", "logs"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "metrics", "logs"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12.1"
tonic-middleware = "0.2.1"
tower = "0.4"
tracing = { version = "0.1.40", features = ["std"] }
tracing-core = { version = "0.1" }
tracing-opentelemetry = { version = "0.25" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }

[dependencies.opentelemetry-proto]
git = "https://github.com/open-telemetry/opentelemetry-rust"
features = ["full"]
