[package]
name = "tracing-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
flume = "0.11"
once_cell = "1.13"
opentelemetry-semantic-conventions = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-opentelemetry = { version = "0.25" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }

[dependencies.simple-observability-pipeline]
path = "../simple-observability-pipeline"