[package]
name = "tracing-fmt"
version = "0.1.0"
edition = "2021"

[features]
default = ["ansi", "tracing-log"]
ignore-fields = []
ansi = []
tracing-log = []

[dependencies]
nu-ansi-term = "0.50.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.30", features = ["std"] }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }
